# centimail

./: .gitignore  AGENTS.md  README.md  dev.sh  package.json  pyproject.toml
app/: globals.css  layout.tsx  page.tsx
app/api/classify/emails/: route.ts
app/api/classify/unread/: route.ts
backend/: __init__.py  classifier.py  config.py  gmail.py  main.py  openrouter.py  server.py
frontend/: index.html
frontend/src/: App.css  App.tsx  index.css
lib/backend/: config.ts  gmail.ts  http.ts  openrouter.ts  rate-limit.ts  types.ts
web/: README.md
web/app/: page.tsx
web/app/api/classify/unread/: route.ts
web/lib/backend/: classifier.ts  config.ts  gmail.ts
